Fix recursive call in `AttributeVisitor`